Wait for saving to complete in ImageWindow as well

BUG: 132081 

svn path=/trunk/extragear/graphics/digikam/; revision=572636